--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                                         <ul id="navigation">
                                             <li><a class="active" href="/">home</a></li>
                                             <li><a href="/#about-us">About</a></li>
-                                            <li><a href="/#our-services">Services</a></li>
                                             <li><a href="/#projects">Projects</a></a></li>
+                                            <li><a href="/#our-services">Services</a></li>
                                             <!--
                                             <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
@@ -261,10 +261,10 @@ and designing high quality and scalable solutions. Contact us to learn more.
     <!-- about_area_end  -->
     
     <!-- projects area -->
-    <div class="service_area">
+    <div class="service_area" id="projects">
         <div class="container">
             <div class="row">
-                <div class="col-xl-12" id="our-services">
+                <div class="col-xl-12">
                     <div class="section_title text-center mb-50">
                         <h3>Projects</h3>
                     </div>
@@ -767,7 +767,7 @@ and designing high quality and scalable solutions. Contact us to learn more.
             </div>
         </div>
         -->
-        <div class="footer_top">
+        <div class="footer_top" id="contact-us">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-3 col-md-6 col-lg-3 ">
