updated email address

--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@ and designing high quality and scalable solutions. Contact us to learn more.
                                 Canada
                                 <br>
                                 <a href="#">780-246-3518</a> <br>
-                                <a href="#">3cprojectservicesinc@gmail.com</a>
+                                <a href="#">info@3cprojects.ca</a>
                             </p>
                             <p>
 
