--- a/index.html
+++ b/index.html
@@ -775,13 +775,11 @@ and designing high quality and scalable solutions. Contact us to learn more.
                                 <h3 class="footer_title">
                                         About
                                 </h3>
-                            <p>13028 65 St NW
-                                Edmonton, T5A 1A1
-                                Canada
-                                <br>
-                                <a href="#">780-246-3518</a> <br>
-                                <a href="#">info@3cprojects.ca</a>
-                            </p>
+                                <p>13028 65 St NW Edmonton, T5A 1A1 Canada
+                                    <br>
+                                    <a href="#">780-246-3518</a> <br>
+                                    <a href="#">info@3cprojects.ca</a>
+                                </p>
                             <p>
 
 
