--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     </div>
                                     <div class="address_info">
                                         <h3>Address</h3>
-                                        <p>13028 65 St NW Edmonton, T5A 1A1 Canada</p>
+                                        <p>10060 Jasper Ave Tower 1, Suite 2020, Edmonton, AB T5J 3R8</p>
                                     </div>
                                 </div>
                                 <div class="single_address d-flex">
@@ -775,7 +775,7 @@ and designing high quality and scalable solutions. Contact us to learn more.
                                 <h3 class="footer_title">
                                         About
                                 </h3>
-                                <p>13028 65 St NW Edmonton, T5A 1A1 Canada
+                                <p>10060 Jasper Ave Tower 1, Suite 2020, Edmonton, AB T5J 3R8
                                     <br>
                                     <a href="#">780-246-3518</a> <br>
                                     <a href="#">info@3cprojects.ca</a>
